Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96368

Mediaplayer's video output doesn't update when changing video source on macOS/iOS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.0, 6.2.1, 6.3.0 Alpha
    • 6.2.0 Beta4
    • Multimedia
    • None
    • iOS/tvOS/watchOS, macOS
    • 59a32742d66a1fe17320acd133922c105ec211f4 (qt/qtmultimedia/dev) abaa8e3cd0bae3793cfcf76776b8c58a029b08a7 (qt/qtmultimedia/6.2) d96f082ce7cf882a3a8839e5bc1637e1a5880c31 (qt/qtmultimedia/6.2.0)

    Description

      When playing a video with QMediaPlayer and changing the video source, the video output will keep showing the last frame of the previous video. Reproducible with the mediaplayer example and the recorder example when playing the recorder captures.

      Attachments

        For Gerrit Dashboard: QTBUG-96368
        # Subject Branch Project Status CR V

        Activity

          People

            dorisverria Doris Verria
            dorisverria Doris Verria
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes